fixing slider text on mobile

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12 text-center">
-                <div class="slides-text probootstrap-animate">
+                <div class="slides-text probootstrap-animate carousel-text">
                   <h2>Transform Your Vision into Reality</h2>
                   <p>
                     Whether you need a web app, a mobile app, a logo, or a 3D
