fixing slider text on mobile

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12 text-center">
-                <div class="slides-text probootstrap-animate">
+                <div class="slides-text probootstrap-animate carousel-text">
                   <h2>Transform Your Vision into Reality</h2>
                   <p>
                     Whether you need a web app, a mobile app, a logo, or a 3D
@@ -100,7 +100,6 @@
                   <p>
                     <a
                       href="/contact/"
-                      target="_blank"
                       class="btn btn-primary"
                       >Let's Connect</a
                     >
@@ -114,7 +113,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12 text-center">
-                <div class="slides-text probootstrap-animate">
+                <div class="slides-text probootstrap-animate carousel-text">
                   <h2>Stand Out from the Crowd</h2>
                   <p>
                     In today’s competitive market, you need technology solutions
@@ -125,7 +124,6 @@
                   <p>
                     <a
                       href="/contact/"
-                      target="_blank"
                       class="btn btn-primary"
                       >Let's Connect</a
                     >
@@ -142,7 +140,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12 text-center">
-                <div class="slides-text probootstrap-animate">
+                <div class="slides-text probootstrap-animate carousel-text">
                   <h2>Make a Difference in the World</h2>
                   <p>
                     We are more than just a technology company. We are a social
@@ -154,7 +152,6 @@
                   <p>
                     <a
                       href="/contact/"
-                      target="_blank"
                       class="btn btn-primary"
                       >Let's Connect</a
                     >
