added some partners

--- a/projects/index.html
+++ b/projects/index.html
@@ -108,7 +108,7 @@
           class="col-md-12 section-heading probootstrap-animate"
           style="text-align: right"
         >
-          <p>click on any thumbnail to view full size image</p>
+          <p>click on any thumbnail to view full size color image</p>
         </div>
 
         <div class="row">
@@ -122,7 +122,7 @@
             <div class="container">
               <div class="row photos probootstrap-animate">
                 <div class="col-sm-6 col-md-4 col-lg-3 item">
-                  <a href="img/proj/swapam.jpg" data-lightbox="photos"
+                  <a href="../img/proj/swapam-logo.png" data-lightbox="photos"
                     ><img class="img-fluid" src="../img/proj/swapam.jpg"
                   /></a>
                 </div>
@@ -147,7 +147,7 @@
             <div class="container">
               <div class="row photos probootstrap-animate">
                 <div class="col-sm-6 col-md-4 col-lg-3 item">
-                  <a href="img/proj/swapam.jpg" data-lightbox="photos"
+                  <a href="../img/proj/swapam-logo.png" data-lightbox="photos"
                     ><img class="img-fluid" src="../img/proj/swapam.jpg"
                   /></a>
                 </div>
@@ -214,6 +214,12 @@
                 </li>
                 <li>
                   <a href="https://drfixed.com/" target="_blank">Dr. Fixed</a>
+                </li>
+                <li>
+                  <a href="https://beyond54.org/" target="_blank">beyond54</a>
+                </li>
+                <li>
+                  <a href="https://tekchillsfoundation.org/" target="_blank">Tekchills Foundation</a>
                 </li>
               </ul>
             </div>
