--- a/about/index.html
+++ b/about/index.html
@@ -297,6 +297,12 @@
                 <li>
                   <a href="https://drfixed.com/" target="_blank">Dr. Fixed</a>
                 </li>
+                <li>
+                  <a href="https://beyond54.org/" target="_blank">beyond54</a>
+                </li>
+                <li>
+                  <a href="https://tekchillsfoundation.org/" target="_blank">Tekchills Foundation</a>
+                </li>
               </ul>
             </div>
           </div>
