initial refactor push

--- a/index.html
+++ b/index.html
@@ -89,19 +89,15 @@
             <div class="row">
               <div class="col-md-12 text-center">
                 <div class="slides-text probootstrap-animate carousel-text">
-                  <h2>Transform Your Vision into Reality</h2>
+                  <h2>Turn GenAI Vision into Production Reality</h2>
                   <p>
-                    Whether you need a web app, a mobile app, a logo, or a 3D
-                    model, we have the expertise and the passion to make it
-                    happen. We work with you to understand your needs, your
-                    goals, and your vision, and we deliver solutions that exceed
-                    your expectations.
+                    We build custom generative AI assistants, LLM-powered search, and automated content pipelines. We combine technical expertise with a mission-driven focus to deliver practical, affordable solutions. We partner with product and engineering teams to align scope, performance, and cost.
                   </p>
                   <p>
                     <a
                       href="/contact/"
                       class="btn btn-primary"
-                      >Let's Connect</a
+                      >Start a Pilot</a
                     >
                   </p>
                 </div>
@@ -114,18 +110,15 @@
             <div class="row">
               <div class="col-md-12 text-center">
                 <div class="slides-text probootstrap-animate carousel-text">
-                  <h2>Stand Out from the Crowd</h2>
+                  <h2>Differentiate with Generative AI</h2>
                   <p>
-                    In today’s competitive market, you need technology solutions
-                    that reflect your vision, your mission, and your
-                    personality. We help you create solutions that resonate with
-                    your target audience, build trust, and drive loyalty.
+                    In today’s competitive landscape, you need AI solutions that align with your mission and deliver measurable outcomes. We design enterprise-grade generative AI systems that connect with your audience, build trust, and accelerate adoption.
                   </p>
                   <p>
                     <a
                       href="/contact/"
                       class="btn btn-primary"
-                      >Let's Connect</a
+                      >Request a Demo</a
                     >
                   </p>
                 </div>
@@ -141,19 +134,15 @@
             <div class="row">
               <div class="col-md-12 text-center">
                 <div class="slides-text probootstrap-animate carousel-text">
-                  <h2>Make a Difference in the World</h2>
+                  <h2>AI With Purpose</h2>
                   <p>
-                    We are more than just a technology company. We are a social
-                    enterprise that cares about making a positive impact in the
-                    world. A portion of our profits goes to support meaningful
-                    social causes in Ghana, Nigeria, and the Gambia, such as
-                    education, health, and environment.
+                    We are more than an AI company—we are a social enterprise committed to positive global impact. 15% of our profits fund education, health, and environmental programs in Ghana, Nigeria, Uganda, and the Gambia.
                   </p>
                   <p>
                     <a
                       href="/contact/"
                       class="btn btn-primary"
-                      >Let's Connect</a
+                      >Let's Chat</a
                     >
                   </p>
                 </div>
